--- a/package.json
+++ b/package.json
@@ -2,26 +2,77 @@
   "name": "eyefind.info",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "JoseMa Esparev",
+    "email": "jm.esparev@gmail.com",
+    "url": "https://esparev.com"
+  },
+  "homepage": "https://github.com/ludoria-app/eyefind.info/blob/main/README.md",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "release": "release-it",
+    "release:patch": "release-it patch",
+    "release:minor": "release-it minor",
+    "release:major": "release-it major",
+    "release:beta": "release-it --increment --preRelease=beta",
+    "release:beta:patch": "release-it --increment --preRelease=beta patch",
+    "release:beta:minor": "release-it --increment --preRelease=beta minor",
+    "release:beta:major": "release-it --increment --preRelease=beta major",
+    "release:alpha": "release-it --increment --preRelease=alpha",
+    "release:alpha:patch": "release-it --increment --preRelease=alpha patch",
+    "release:alpha:minor": "release-it --increment --preRelease=alpha minor",
+    "release:alpha:major": "release-it --increment --preRelease=alpha major",
+    "release:rc": "release-it --increment --preRelease=rc",
+    "release:rc:patch": "release-it --increment --preRelease=rc patch",
+    "release:rc:minor": "release-it --increment --preRelease=rc minor",
+    "release:rc:major": "release-it --increment --preRelease=rc major",
+    "release:canary": "release-it --increment --preRelease=canary",
+    "release:canary:patch": "release-it --increment --preRelease=canary patch",
+    "release:canary:minor": "release-it --increment --preRelease=canary minor",
+    "release:canary:major": "release-it --increment --preRelease=canary major",
+    "release:dry-run": "release-it --dry-run",
+    "release:dry-run:patch": "release-it --dry-run patch",
+    "release:dry-run:minor": "release-it --dry-run minor",
+    "release:dry-run:major": "release-it --dry-run major",
+    "prepare": "husky"
   },
   "dependencies": {
+    "clsx": "^2.1.1",
+    "cva": "npm:class-variance-authority@^0.7.1",
+    "lucide-react": "^0.525.0",
+    "next": "15.4.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "next": "15.4.1"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@commitlint/cli": "^19.8.1",
+    "@commitlint/config-conventional": "^19.8.1",
+    "@eslint/eslintrc": "^3",
+    "@release-it/conventional-changelog": "^10.0.1",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
+    "eslint": "^8",
     "eslint-config-next": "15.4.1",
-    "@eslint/eslintrc": "^3"
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-n": "^17.21.0",
+    "eslint-plugin-promise": "^7.2.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-perf": "^3.3.3",
+    "lint-staged": "^16.1.2",
+    "prettier-plugin-tailwindcss": "^0.6.14",
+    "release-it": "^19.0.3",
+    "tailwindcss": "^4",
+    "typescript": "^5",
+    "typescript-eslint": "^8.37.0"
   }
 }
