--- a/package.json
+++ b/package.json
@@ -43,6 +43,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.10.0",
     "clsx": "^2.1.1",
     "cva": "npm:class-variance-authority@^0.7.1",
     "lucide-react": "^0.525.0",
@@ -57,6 +59,7 @@
     "@eslint/eslintrc": "^3",
     "@release-it/conventional-changelog": "^10.0.1",
     "@tailwindcss/postcss": "^4",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
@@ -69,6 +72,7 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-perf": "^3.3.3",
     "lint-staged": "^16.1.2",
+    "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
     "release-it": "^19.0.3",
     "tailwindcss": "^4",
