script: 🔨 streamline release scripts in package.json for better clarity and usability

--- a/package.json
+++ b/package.json
@@ -20,26 +20,14 @@
     "release:patch": "release-it patch",
     "release:minor": "release-it minor",
     "release:major": "release-it major",
-    "release:beta": "release-it --increment --preRelease=beta",
-    "release:beta:patch": "release-it --increment --preRelease=beta patch",
-    "release:beta:minor": "release-it --increment --preRelease=beta minor",
-    "release:beta:major": "release-it --increment --preRelease=beta major",
-    "release:alpha": "release-it --increment --preRelease=alpha",
-    "release:alpha:patch": "release-it --increment --preRelease=alpha patch",
-    "release:alpha:minor": "release-it --increment --preRelease=alpha minor",
-    "release:alpha:major": "release-it --increment --preRelease=alpha major",
-    "release:rc": "release-it --increment --preRelease=rc",
-    "release:rc:patch": "release-it --increment --preRelease=rc patch",
-    "release:rc:minor": "release-it --increment --preRelease=rc minor",
-    "release:rc:major": "release-it --increment --preRelease=rc major",
-    "release:canary": "release-it --increment --preRelease=canary",
-    "release:canary:patch": "release-it --increment --preRelease=canary patch",
-    "release:canary:minor": "release-it --increment --preRelease=canary minor",
-    "release:canary:major": "release-it --increment --preRelease=canary major",
+    "release:alpha": "release-it major --preRelease=alpha",
+    "release:beta": "release-it major --preRelease=beta",
+    "release:pre-beta": "release-it --preRelease=beta",
+    "release:canary": "release-it major --preRelease=canary",
+    "release:rc": "release-it major --preRelease=rc",
+    "release:pre-rc": "release-it --preRelease=rc",
+    "release:pre": "release-it --preRelease",
     "release:dry-run": "release-it --dry-run",
-    "release:dry-run:patch": "release-it --dry-run patch",
-    "release:dry-run:minor": "release-it --dry-run minor",
-    "release:dry-run:major": "release-it --dry-run major",
     "prepare": "husky"
   },
   "dependencies": {
