--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eyefind.info",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.0",
   "private": true,
   "author": {
     "name": "JoseMa Esparev",
